# GitNotes

./: LICENSE  README.md  environment.md  pubspec.yaml
android/app/: build.gradle
app_icons/: MarGitDown_icon_plain.graphite  MarGitDown_icon_theme.graphite
devlog/: devlog.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/git_manager/: git_manager.dart  github_manager.dart
lib/helpers/: animations.dart  appdata_directory.dart  directory.dart  git.dart  ui_helper.dart
lib/helpers/git/: directory.dart  git_multiple_repo.dart  git_repo.dart  git_repo_manager.dart  repo_storage.dart
lib/helpers/settings/: interface_settings.dart  settings.dart  settings_helper.dart  theming.dart
lib/ui/GitCloneScreen.dart/: git_clone_screen.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
messages/: checkout.proto  clone.proto  commit_push_check.proto  git.proto  git_actions.proto  git_add.proto  git_checkout.proto  git_clone.proto  git_commit.proto  git_page_interactions.proto  git_pull.proto  git_push.proto  git_push_pull_messages.proto  git_restore.proto  git_status.proto  markdown.proto  pull.proto  snack_error.proto  status.proto
native/hub/: Cargo.toml
native/hub/src/: build.rs  handlers.rs  lib.rs  markdown.rs
native/hub/src/git_functions/: branch_repo.rs  clone_public_repo.rs  clone_repo.rs  commit_stage.rs  errors.rs  git_add.rs  git_checkout.rs  git_clone.rs  git_commit.rs  git_handlers.rs  git_pull.rs  git_push.rs  git_restore.rs  git_status.rs  mod.rs  pull_repo.rs  push_commit.rs  restore_file.rs  stage_file.rs  status.rs
native/hub/src/git_manager/: clone_repo.rs
native/hub/src/markdown/: markdown_custom_task_list.rs  markdown_handler.rs  mod.rs  plugins_management.rs
native/hub/src/markdown/custom/: mod.rs
native/hub/src/markdown/custom/block/: mod.rs  syntect.rs
native/hub/src/markdown/custom/inline/: link.rs
native/hub/src/message_buffer/: buffer.rs
native/hub/src/page_handlers/: mod.rs  status_page_handlers.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+54 files in other folders)
