[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
gix = { version = "0.63.0", default-features = true, features = [
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
] }
rinf = "6.14.2"
prost = "0.13.1"
tokio = { version = "1", features = ["sync", "rt"] }

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.6.0", features = ["sync", "rt"] }
# wasm-bindgen = "0.2.92"

[dev-dependencies]
cc = "1.1.5"
